--- a/package.json
+++ b/package.json
@@ -21,12 +21,18 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "angular-addtocalendar": "^1.3.4",
+    "angular-weather-widget": "^1.2.4",
     "body-parser": "^1.18.3",
     "core-js": "^2.5.4",
+    "dark-sky-api": "^0.6.32",
     "express": "^4.16.4",
+    "firebase": "^5.10.1",
     "material-design-icons-iconfont": "^4.0.5",
+    "moment": "^2.24.0",
     "mongodb": "^3.1.13",
     "mongoose": "^5.4.22",
+    "request": "^2.88.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
